--- a/creditscore_project.Rmd
+++ b/creditscore_project.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "R Notebook"
 output:
+  pdf_document:
+    toc: true
   html_document:
     toc: true
     df_print: paged
@@ -31,7 +33,7 @@ Overall, this study highlights the effectiveness of data-driven methods in under
 ## Import Dataset
 
 ```{r}
-data <- read.csv("C:/Users/mihim/Desktop/Uni/R/Project/data/train.csv", header = TRUE, sep = ",")
+data <- read.csv("./data/train.csv", header = TRUE, sep = ",")
 ```
 
 **Objective**
